force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/Animal360_Assessment_Template_Default__mdt.object-meta.xml
<CustomObject>
    <description
  >Packaged runtime template defaults that seed editable template records.</description>
    <label>Animal360 Assessment Template Default</label>
    <pluralLabel>Animal360 Assessment Template Defaults</pluralLabel>
</CustomObject>