force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/fields/Assessment_Context__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Context__c</fullName>
    <description>Assessment context targeted by the template.</description>
    <label>Assessment Context</label>
    <length>80</length>
    <type>Text</type>
</CustomField>