force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/fields/Default_For_Species__c.field-meta.xml
<CustomField>
    <fullName>Default_For_Species__c</fullName>
    <description
  >Marks the packaged template as the default runtime template for its species and context.</description>
    <label>Default For Species</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>