force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/fields/Description_Text__c.field-meta.xml
<CustomField>
    <fullName>Description_Text__c</fullName>
    <description>Packaged description for the runtime template.</description>
    <label>Description Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>