force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description>Species targeted by the template.</description>
    <label>Species</label>
    <length>80</length>
    <type>Text</type>
</CustomField>