force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >Packaged runtime status, such as Active or Retired.</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>