force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/fields/Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Template_Code__c</fullName>
    <description
  >Runtime template code exposed to admins and reports.</description>
    <label>Template Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>