force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/fields/Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Template_Key__c</fullName>
    <description
  >Stable packaged template key used by the seed service.</description>
    <label>Template Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>