force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/fields/Template_Label__c.field-meta.xml
<CustomField>
    <fullName>Template_Label__c</fullName>
    <description
  >User-facing label for the seeded runtime template.</description>
    <label>Template Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>