force-app/main/default/objects/Animal360_Assessment_Template_Default__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description
  >Runtime version identifier for the packaged template.</description>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>